--- a/Cmms/Cmms.csproj
+++ b/Cmms/Cmms.csproj
@@ -17,6 +17,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 
 	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
+
+	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.3.0" />
 	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" OutputItemType="Analyzer" />
 	  <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
