--- a/Cmms/Cmms.csproj
+++ b/Cmms/Cmms.csproj
@@ -25,6 +25,7 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.Graph" Version="4.29.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="SendGrid" Version="9.28.1" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.18.0" />
 
 
@@ -38,6 +39,10 @@
   
 	  <None Update="host.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+  
+	  <None Update="InviteUserTemplateMail.html">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	  <None Update="local.settings.json">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
